Jdk-11 compatibility